--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "yarn run tsoa routes & yarn run tsc --outDir build --experimentalDecorators & node build/src/server.js"
+    "start": "yarn run tsoa routes & ts-node src/server.ts"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
+    "ts-node": "^10.9.2",
     "tsoa": "^6.0.1"
   },
   "devDependencies": {
