--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "yarn run tsoa routes & ts-node src/server.ts"
+    "start": "ts-node src/server.ts",
+    "generate-routes": "yarn run tsoa routes"
   },
   "author": "",
   "license": "ISC",
